# WAXI

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  The road to WASM.md
cli/: CMakeLists.txt  main.cpp
core_src/: LinkHelp.h  LinkerHelpers.h  NvgProxy.cpp  NvgProxy.h  WasiVfsMap.h  WasmVM.h  WasmVM_Config.h  XP_API.h
core_src/xp_api/: readme.txt  xp_api.h  xp_api_cb.h  xp_api_cmd.h  xp_api_dref.h  xp_api_gfx.h  xp_api_log.h  xp_api_nvg.h
examples/host_api/: host_api.h  host_api_dref.h
examples/wasm_plugin_basic/: CMakeLists.txt  wasm_plugin_basic.cpp  wasm_plugin_basic.h
wasm_xpl_src/: WasmVM.h  XP_API.h
xpl/: CMakeLists.txt  xplane_plugin_main.cpp
xpl/xplane_plugin/wasm_xpl/: config.json
xpl/xplane_plugin/wasm_xpl/vfs_root/: readme.md  readme.txt
xpl/xplane_plugin_tpl/: config.json
xpl/xplane_plugin_tpl/vfs_lock/: readme.txt
